<resources>
    <string name="app_name">Personal Record Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="generic_error_text">Error</string>

    <string name="people">People</string>
    <string name="no_people">No people yet. Please add some people!</string>

    <string name="extended_name">%1$s %2$s %3$s</string>
    <string name="full_name">%1$s %2$s</string>

    <string name="add_new_person_label">Add a New Person</string>
    <string name="add_new_person_button_text">Add Person</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="license">Driver\'s License #</string>

    <string name="license_label">Driver\'s License #: </string>

    <string name="record_date">Date</string>
    <string name="record_time">Time</string>
    <string name="record_duration">Duration</string>
    <string name="record_signature">Signature</string>

    <string name="no_person_details">No records yet. Please add a record!</string>

    <string name="add_new_person_detail_label">Add a New Record</string>
    <string name="add_new_person_detail_button_text">Add Record</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="signature">Record Signature</string>
    <string name="place_signature">Place Signature</string>
    <string name="edit_signature">Edit Signature</string>

    <string name="save_signature">Save Signature</string>
    <string name="clear_signature">Clear Signature</string>

    <string name="saving_signature_loading_message">Saving Signature. Please wait&#8230;</string>

    <string name="adding_record_loading_message">Adding Record. Please wait&#8230;</string>

    <string name="signature_invalid">You must place a signature before adding the record.</string>

    <string name="error_invalid">This input is invalid.</string>

</resources>
