<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/person_detail_record_header"
        app:layout_constraintBottom_toBottomOf="@id/dateLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dateLabel" />

    <TextView
        android:id="@+id/dateLabel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/person_detail_record_header_text_padding"
        android:paddingBottom="@dimen/person_detail_record_header_text_padding"
        android:singleLine="true"
        android:text="@string/record_date"
        android:textColor="@color/person_detail_record_header_text_color"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/timeLabel" />

    <TextView
        android:id="@+id/timeLabel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/record_time"
        android:textColor="@color/person_detail_record_header_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintLeft_toRightOf="@+id/dateLabel"
        app:layout_constraintRight_toLeftOf="@id/durationLabel"
        app:layout_constraintTop_toTopOf="@+id/dateLabel" />

    <TextView
        android:id="@+id/durationLabel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/record_duration"
        android:textColor="@color/person_detail_record_header_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintLeft_toRightOf="@+id/timeLabel"
        app:layout_constraintRight_toLeftOf="@id/signatureLabel"
        app:layout_constraintTop_toTopOf="@+id/dateLabel" />

    <TextView
        android:id="@+id/signatureLabel"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/record_signature"
        android:textColor="@color/person_detail_record_header_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintLeft_toRightOf="@+id/durationLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateLabel" />

    <com.yveschiong.personalrecordbook.common.views.EmptyRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/person_detail_record_empty_list_text_padding"
        android:text="@string/no_person_details"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintLeft_toLeftOf="@id/recyclerView"
        app:layout_constraintRight_toRightOf="@id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>