<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.yveschiong.personalrecordbook.ui.addpersondetail.AddPersonDetailViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/add_person_page_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        app:textChange="@{(val) -> { vm.setDate(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/timeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time"
                        app:textChange="@{(val) -> { vm.setTime(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/durationLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duration"
                        app:textChange="@{(val) -> { vm.setDuration(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signatureLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/durationLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signature"
                        app:textChange="@{(val) -> { vm.setSignature(val) }}" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.addButtonClicked()}"
            android:text="@string/add_new_person_detail_button_text"
            android:theme="@style/AddButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>

