<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.yveschiong.personalrecordbook.ui.addperson.AddPersonViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/add_person_page_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        app:textChange="@{(val) -> { vm.setFirstName(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/middleNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/middleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/middle_name"
                        app:textChange="@{(val) -> { vm.setMiddleName(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/middleNameLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        app:textChange="@{(val) -> { vm.setLastName(val) }}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/licenseLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/license"
                        app:textChange="@{(val) -> { vm.setLicense(val) }}" />

                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.clicked()}"
            android:text="@string/add_new_person_button_text"
            android:theme="@style/AddButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>

